--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -58,7 +58,7 @@ body {
 }
 
 .navbar h1 {
-font-size: 25px;
+  font-size: 25px;
 }
 
 /*============================HEADER SECTION===================================*/
@@ -93,7 +93,7 @@ font-size: 25px;
 /*============================ACHIEVEMENT SECTION===================================*/
 
 
-.achiver-header p {
+.home-achievements-header p {
   margin-top: 0px;
   font-size: 40px;
   letter-spacing: 2px;
@@ -108,31 +108,30 @@ font-size: 25px;
   font-family: 'Angelican', sans-serif;
 
 }
+
+.home-news-header{
+  font-size: 40px;
+  letter-spacing: 2px;
+  color: #2c0032;
+  font-family: 'Angelican', sans-serif;
+}
 /*============================ABOUT SECTION===================================*/
 
 .about-container {
-padding-top: 50px;
+  padding-top: 50px;
 }
 .about-header {
-text-align: center;
+  text-align: center;
 }
 
-.about-header hr {
-padding-right: 400px;
- display: inline-block;
- margin-right: 20px;
-  margin-top: 100px;
-  border-width: 2px;
-  background-color: #d79b2a;
-}
-.about-header img {
- display: inline-block;
- margin-bottom: 40px;
+.img-title {
+  display: inline-block;
+  margin-bottom: 40px;
 }
 
 .sentence {
-text-indent: 50px;
-text-align: justify;
+  text-indent: 50px;
+  text-align: justify;
 }
 .btn-read-more {
   background-color: transparent;
@@ -155,6 +154,12 @@ text-align: justify;
 }
 
 /*==================================EVENT SECTION=====================================================*/
+
+
+.title-headers{
+  display: inline-block;
+  margin-bottom: 40px;
+}
 .news-body-content {
   padding-top: 50px;
 }
@@ -203,9 +208,9 @@ text-align: justify;
 }
 
 .event-title h3 {
- color: #333333;
- font-size: 15px;
- margin-top: 0px;
+  color: #333333;
+  font-size: 15px;
+  margin-top: 0px;
 }
 
 .events hr {
@@ -215,14 +220,14 @@ text-align: justify;
 }
 
 .event-title h1 {
-    font-size: 40px;
+  font-size: 40px;
   letter-spacing: 2px;
   color: #2c0032;
   font-family: 'Angelican', sans-serif;
 
 }
 .event-title h3 {
-    font-size: 18px;
+  font-size: 18px;
   letter-spacing: 2px;
   color: #2c0032;
   font-family: 'Angelican', sans-serif;
@@ -231,7 +236,8 @@ text-align: justify;
 /*==================================NEWS SECTION=====================================================*/
 
 .news-img {
-  margin: 50px;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 .news-card {
   padding: 20px;
@@ -252,9 +258,9 @@ text-align: justify;
 
 
 .news-title {
- color: #333333;
- font-family: 'Oswald', sans-serif;
- color: #333333;
+  color: #333333;
+  font-family: 'Oswald', sans-serif;
+  color: #333333;
 
 
 }
@@ -284,9 +290,9 @@ text-align: justify;
 }
 
 .home-news-container-title h3 {
- font-size: 15px;
- color: #333333;
- margin-top: 0px;
+  font-size: 15px;
+  color: #333333;
+  margin-top: 0px;
 }
 
 
@@ -306,8 +312,8 @@ text-align: justify;
 }
 
 .card-img:hover{
- transform: scale(1.1);
- transition-delay: 10;
+  transform: scale(1.1);
+  transition-delay: 10;
 }
 
 
@@ -371,12 +377,12 @@ text-align: justify;
 
 .navbar-footer span p:hover {
   font-family: 'Oswald', sans-serif;
-  color:#d79b2a;
+  color:	#FFD700;
 }
 
 .footer-community h2 {
   font-family: 'Angelican', sans-serif;
-  color:#d79b2a;
+  color:	#FFD700;
   letter-spacing: 2px;
 }
 
@@ -391,7 +397,7 @@ text-align: justify;
 }
 .footer-community span p:hover{
   font-family: 'Oswald', sans-serif;
-  color:#d79b2a;
+  color:	#FFD700;
 }
 
 .index-event-title {
@@ -421,7 +427,172 @@ text-align: justify;
   text-decoration: none;
   color:#d79b2a;
   border: 2px solid #FFD700;
+}
 
 
+.hr-title {
+  padding-right: 400px;
+  display: inline-block;
+  margin-right: 20px;
+  margin-top: 100px;
+  border-width: 2px;
+  background-color: #d79b2a;
+
+}
+
+@media (min-width: 992px)  and (max-width: 1199.98px) {
+.header-span p {
+
+  font-size: 30px;
+}
+  .hr-title {
+    padding-right: 300px;
+    display: inline-block;
+    margin-right: 10px;
+    margin-left: 10px;
+    margin-top: 100px;
+    border-width: 2px;
+    background-color: #d79b2a;
+  }
+
+
+  .navbar-brand span{
+    font-size:2rem;
+    line-height:1.2;
+    font-weight: 200;
+    font-size: 25px;
+    display:inline-block;
+    vertical-align:middle;
+    padding: 55px 0 0 15px;
+    letter-spacing: 2px;
+    color: #2c0032;
+    font-family: 'Angelican', sans-serif;
+  }
+
+
+  .navbar-image{
+    width: 100px;
+    height: auto;
+  }
+
+
+  .navbar-nav li {
+    padding-right: 10px;
+
+  }
+
+
+}
+
+
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+
+  .header-span p {
+
+    font-size: 25px;
+  }
+  .hr-title {
+    padding-right: 250px;
+    display: inline-block;
+    margin-right: 10px;
+    margin-left: 10px;
+    margin-top: 100px;
+    border-width: 2px;
+    background-color: #d79b2a;
+
+  }
+
+
+  .img-title {
+    width: 100px;
+    height: auto;
+  }
+
+  .navbar-image{
+    width: 100px;
+    height: auto;
+  }
+
+
+
+}
+
+
+@media (min-width: 576px) and (max-width: 767.98px) {
+
+  .header-span p {
+
+    font-size: 25px;
+  }
+  .hr-title {
+    padding-right: 150px;
+    display: inline-block;
+    margin-right: 10px;
+    margin-left: 10px;
+    margin-top: 100px;
+    border-width: 2px;
+    background-color: #d79b2a;
+
+  }
+
+  .img-title {
+    width: 100px;
+    height: auto;
+  }
+  .navbar-image{
+    width: 100px;
+    height: auto;
+  }
+
+}
+
+
+@media (max-width: 575.98px) {
+
+.header-span p {
+  font-size: 25px;
+}
+  .hr-title {
+    padding-right: 0px;
+    display: inline-block;
+    margin-right: 10px;
+    margin-left: 10px;
+    margin-top: 100px;
+    border-width: 2px;
+    background-color: #d79b2a;
+
+  }
+
+  .img-title {
+    width: 70px;
+    height: auto;
+  }
+  .navbar-image{
+    width: 50px;
+    height: auto;
+    padding-top:30px;
+
+  }
+
+
+
+  .navbar-brand span{
+    font-size:2rem;
+    line-height:1.2;
+    font-weight: 200;
+    font-size: 20px;
+    display:inline-block;
+    vertical-align:middle;
+    padding: 55px 0 0 15px;
+    letter-spacing: 1px;
+    color: #2c0032;
+    font-family: 'Angelican', sans-serif;
+  }
+
+
+.navbar-brand span h1{
+    font-size: 20px;
+  }
 
 }
