--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,7 +9,77 @@ body {
 }
 
 
+.wrapper2 {
+        display: grid;
+    grid-gap: 10px;
+        grid-template-columns: repeat(auto-fill, auto ) ;
+        background-color: #fff;
+        color: #444;
+    }
 
+    .box2 {
+        background-color: #444;
+        color: #fff;
+        border-radius: 5px;
+        padding: 20px;
+        font-size: 150%;
+
+    }
+
+    .aa {
+        grid-column: 1 / 3;
+    }
+    .bb {
+        grid-column: 3 / 5 ;
+    }
+    .cc {
+        grid-column: 1 / 2 ;
+        grid-row: 2 ;
+    }
+    .dd {
+        grid-column: 2 / 5 ;
+        grid-row: 2 ;
+    }
+
+    .ee {
+        grid-column: 1 / 5;
+        grid-row: 3;
+    }
+
+.wrapper {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: [col1-start] auto  [col2-start] auto  [col3-start] auto [col3-end];
+  grid-template-rows: [row1-start] auto [row2-start] auto [row2-end];
+  background-color: #fff;
+  color: #444;
+}
+
+.box {
+
+  color: #fff;
+  border-radius: 5px;
+  padding: 5px;
+  font-size: 150%;
+
+}
+
+.a {
+  grid-column: col1-start / col3-start;
+  grid-row: row1-start ;
+}
+.b {
+  grid-column: col3-start ;
+  grid-row: row1-start / row2-end;
+}
+.c {
+  grid-column: col1-start;
+  grid-row: row2-start ;
+}
+.d {
+  grid-column: col2-start ;
+  grid-row: row2-start ;
+}
 /*============================NAVBAR SECTION===================================*/
 
 .navbar-brand span{
@@ -383,6 +453,7 @@ body {
 .footer-community h2 {
   font-family: 'Angelican', sans-serif;
   color:	#FFD700;
+  font-size: 20px;
   letter-spacing: 2px;
 }
 
@@ -441,10 +512,10 @@ body {
 }
 
 @media (min-width: 992px)  and (max-width: 1199.98px) {
-.header-span p {
+  .header-span p {
 
-  font-size: 30px;
-}
+    font-size: 30px;
+  }
   .hr-title {
     padding-right: 300px;
     display: inline-block;
@@ -550,9 +621,9 @@ body {
 
 @media (max-width: 575.98px) {
 
-.header-span p {
-  font-size: 25px;
-}
+  .header-span p {
+    font-size: 25px;
+  }
   .hr-title {
     padding-right: 0px;
     display: inline-block;
@@ -591,7 +662,7 @@ body {
   }
 
 
-.navbar-brand span h1{
+  .navbar-brand span h1{
     font-size: 20px;
   }
 
