--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,6 +8,12 @@ body {
   font-weight: 200;
 }
 
+.card-img-top {
+    width: 100%;
+    height: 20vw;
+    object-fit: cover;
+}
+
 
 .wrapper2 {
   display: grid;
@@ -557,9 +563,10 @@ body {
 
 
 @media (min-width: 768px) and (max-width: 991.98px) {
-
+.news-col{
+  padding-left: 10px;
+}
   .header-span p {
-
     font-size: 25px;
   }
   .hr-title {
@@ -583,6 +590,8 @@ body {
     width: 100px;
     height: auto;
   }
+
+
 
 
 
